Changes
=======

0.8.0a ()
------------------
- cache WFS GetCapabilities response for faster requests and fewer http errors
- retry bc2pg requests on failure
- move bc2pg download logging to bcdata.log

0.7.12 (2023-06-28)
------------------
- fix bc2pg cli error

0.7.11 (2023-06-28)
------------------
- fix conflicting bc2pg short option definitions (#134)

0.7.10 (2023-06-28)
------------------
- add bc2pg option --geometry_type to avoid issues when type sniffing (#132)
- fix appending to table with name different from source (#133)

0.7.9 (2023-06-13)
------------------
- fix geometry type checking (#131)
- update geopandas requirement (#129)

0.7.8 (2023-06-01)
------------------
- pin geopandas requirement to <v0.13 (#129)

0.7.7 (2023-04-13)
------------------
- add option to lowercasify properties keys / column names (#126)

0.7.6 (2023-02-01)
------------------
- better handling of connection errors (#118)
- correctly handle empty geodataframes (#121)
- pin sqlalchemy to <2.0               (#124)

0.7.4 (2022-09-28)
------------------
- bc2pg - option --no_timestamp now recognized (#116)
- bc2pg - preserve floating point data (#117)

0.7.3 (2022-09-26)
------------------
- bc2pg - fully handle geometries with Z values (#114) and add a test to check

0.7.2 (2022-09-26)
------------------
- bc2pg - handle geometries with Z values (#114)

0.7.1 (2022-09-26)
------------------
- bc2pg - add missing --sortby option
- bc2pg - better --append checks

0.7.0 (2022-07-18)
------------------
- bcdata.define_request function renamed to define_requests, returns list of
  parsed urls rather than a list of request parameter dictionaries  - this makes
  it easy to interactively generate request urls for geopandas/debugging/other
- new bc2pg Python module/function
    + general purpose loading tool
    + output table column types and comments are as specified in BC Data
      Catalogue API
    + data loads are via sqlalchemy/geopandas